--- a/index.html
+++ b/index.html
@@ -12,25 +12,19 @@
     <div class="container my-4 ">
     <div class="row justify-content-center">
         <div class="col-lg mb-lg-4">
-            <img src="image.jpg" class="img-fluid" alt="" srcset="">
+            <img src="https://github.com/Ditompaolo/ki-exchange.github.io/blob/main/KIexchange_01.png" class="img-fluid" alt="" srcset="">
         </div>
         <div class="col-lg mx-2 align-self-center">
             <div class="my-3">
-                <h1 class="text-center">I'm a Kinsta User</h1>
-                <p>As a passionate software developer, I am deeply enthusiastic about creating and
-                    developing software applications. I am constantly learning and experimenting with new
-                    technologies and approaches, and I have a strong desire to create innovative and effective
-                    solutions to complex problems. I am driven by my curiosity and love for problem-solving, and
-                    I
-                    am committed to producing high-quality, well-designed software that meets the needs of
-                    users.
+                <h1 class="text-center">KI-Exchange</h1>
+                <p>Dieses Format ist die Basis die neuesten Entwicklungen und Anwendungen im Bereich der KI/AI kennenzulernen.
+                    Neben informativen Vorträgen und praxisnahen Testings zu verschiedenen KI-Apps steht der Austausch mit Menschen im Vordergrund.
+                    Die Anwendungsfälle (Use cases), die sich durch Künstliche Intelligenz für Unternehmen, Dienstleister und Freiberufler eröffnen,
+                    sind vielfältig und eröffnen neue Horizonte. Es ist ein Thema, das immer mehr an Bedeutung gewinnt
+                    – und hier bei uns in Oberentfelden wird es greifbar!
                 </p>
             </div>
         </div>
-    </div>
-</div>
-    <header>
-        <h1>KIexchange</h1>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
