--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
             <div class="my-3">
                 <h1 class="text-center">KI-Exchange</h1>
                 <p>Dieses Format ist die Basis die neuesten Entwicklungen und Anwendungen im Bereich der KI/AI kennenzulernen.
-                    Neben informativen Vorträgen und praxisnahen Testings zu verschiedenen KI-Apps steht der Austausch mit Menschen im Vordergrund.
-                    Die Anwendungsfälle (Use cases), die sich durch Künstliche Intelligenz für Unternehmen, Dienstleister und Freiberufler eröffnen,
-                    sind vielfältig und eröffnen neue Horizonte. Es ist ein Thema, das immer mehr an Bedeutung gewinnt
-                    – und hier bei uns in Oberentfelden wird es greifbar!
+                    Neben informativen Vorträgen und praxisnahen Testings zu verschiedenen KI-Apps steht der Austausch mit Menschen im Vordergrund. Die Anwendungsfälle (Use cases), die sich durch Künstliche Intelligenz für Unternehmen, Dienstleister und Freiberufler eröffnen,sind vielfältig und eröffnen neue Horizonte. Es ist ein Thema, das immer mehr an Bedeutung gewinnt – und hier bei uns in Oberentfelden wird es greifbar!
                 </p>
             </div>
         </div>
