--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KIexchange - KI/AI Austauschforum</title>
+    <title>KI-exchange, KI/AI Austauschforum</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
