--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container my-4 ">
     <div class="row justify-content-center">
         <div class="col-lg mb-lg-4">
-            <img src="<a href="KIexchange_01.png">Link zur Zieldatei</a>"
+            <img src="<a href="KIexchange_01.png">https://github.com/Ditompaolo/ki-exchange.github.io/blob/main/KIexchange_01.png</a>"
         </div>
         <div class="col-lg mx-2 align-self-center">
             <div class="my-3">
