--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container my-4 ">
     <div class="row justify-content-center">
         <div class="col-lg mb-lg-4">
-            <img src="ki-exchange.github.io/KIexchange_01.png" alt="Logo">
+            <img src="KIexchange_01.png" alt="Logo">
         </div>
         <div class="col-lg mx-2 align-self-center">
             <div class="my-3">
