--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
                 <li><a href="/forum">Forum</a></li>
             </ul>
         </nav>
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
+    <div class="container-fluid">
+        <div class="mx-4">
+            <a class="navbar-brand" href="#">Kinsta User</a>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Reading Log</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     </header>
     <main>
         <h2>Willkommen bei KIexchange</h2>
