--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
     <div class="container-fluid">
         <div class="mx-4">
+            <img src="KIexchange_01.png" alt="Logo">
             <a class="navbar-brand" href="#">Kinsta User</a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
