--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
         <p>Hier können Sie sich über die neuesten Entwicklungen in KI und AI austauschen.</p>
     </main>
     <footer>
-        <p>&copy; 2024 KI-Exchange</p>[impressumh](texte/impressum.md)
+        <p>&copy; 2024 KI-Exchange</p>
+        <p>[impressumh](texte/impressum.md)</p>
     </footer>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
