--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 </p>
             </div>
         </div>
+        </div [impressum](Impressum.md)
+        </div>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -53,10 +55,10 @@
         <h2>Willkommen bei KIexchange</h2>
         <p>Hier können Sie sich über die neuesten Entwicklungen in KI und AI austauschen.</p>
     </main>
+    [impressum](Impressum.md)
     <footer>
         <p>&copy; 2024 KI-Exchange</p>
-        [impressum](Impressum.md)
-    </footer>
+        </footer>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
