--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                 </p>
             </div>
         </div>
-        </div [impressum](Impressum.md)
-        </div>
+        [impressum](Impressum.md)
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
