--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Markdown Anzeige</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <title>KI-exchange, KI/AI Austauschforum</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -42,7 +44,23 @@
                 </p>
             </div>
         </div>
-        [impressum](Impressum.md)
+        <div id="content"></div>
+
+        <script>
+            // Funktion zum Laden und Anzeigen des Markdown-Inhalts
+            function loadMarkdown() {
+                fetch('beschreibung.md')
+                    .then(response => response.text())
+                    .then(text => {
+                        document.getElementById('content').innerHTML = marked.parse(text);
+                    })
+                    .catch(error => console.error('Fehler beim Laden der Markdown-Datei:', error));
+            }
+    
+            // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
+            window.onload = loadMarkdown;
+        </script>
+        [Impressum](Impressum.md)
         <nav>
             <ul>
                 <li><a href="Impressum.md">Impressum</a></li>
