Bild PS in html-code eingefügt

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
         
     </header>
     <main>
-        <h2>Willkommen bei KIexchange</h2>
-        <p>Hier können Sie sich über die neuesten Entwicklungen in KI und AI austauschen.</p>
+        <img src="KIexchange_01.png" alt="Logo">
     </main>
     <footer>
         <p>&copy; 2024 KI-Exchange</p>
