--- a/index.html
+++ b/index.html
@@ -59,7 +59,21 @@
         
     </header>
     <main>
-        <img src="KIexchange_01.png" alt="Logo">
+        <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="Logo">
+        <script>
+            // Funktion zum Laden und Anzeigen des Markdown-Inhalts
+            function loadMarkdown() {
+                fetch('tuchschmidhuus.md')
+                    .then(response => response.text())
+                    .then(text => {
+                        document.getElementById('content').innerHTML = marked.parse(text);
+                    })
+                    .catch(error => console.error('Fehler beim Laden der Markdown-Datei:', error));
+            }
+    
+            // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
+            window.onload = loadMarkdown;
+        </script> 
     </main>
     <footer>
         <p>&copy; 2024 KI-Exchange</p>
