--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <script>
             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
-            function loadMarkdown1() {
+            function loadMarkdown() {
                 fetch('beschreibung.md')
                     .then(response => response.text())
                     .then(text => {
@@ -62,7 +62,7 @@
         <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="Logo">
         <script>
             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
-            function loadMarkdown2() {
+            function loadMarkdown() {
                 fetch('tuchschmidhuus.md')
                     .then(response => response.text())
                     .then(text => {
