--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
             // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
             window.onload = loadMarkdown;
         </script>  
-        <nav>
-            <ul>
-                <li><a href="Impressum.md">Impressum</a></li>
-            </ul>
+       
         
     </header>
     <main>
@@ -74,6 +71,11 @@
             // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
             window.onload = loadMarkdown;
         </script> 
+        <nav
+        <ul>
+            <li><a href="Impressum.md">Impressum</a></li>
+        </ul>
+        </nav>
     </main>
     <footer>
         <p>&copy; 2024 KI-Exchange</p>
