--- a/index.html
+++ b/index.html
@@ -83,4 +83,9 @@
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
+<p>Contact the author of this page:</p>
+
+<address>
+  <a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br />
+</address>
 </html>
