--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
     <div class="container-fluid">
         <div class="mx-4">
-            <img src="KIexchange_01.png" alt="Logo">
+            <img src="KIexchange_01.png" alt="Logo" width="300" height="200">
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -56,7 +56,7 @@
         </script> 
         
     
-            <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="Logo">
+            <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus" width="300" height="200">
             <script>
                 // Funktion zum Laden und Anzeigen des Markdown-Inhalts
                 function loadMarkdown() {
