head in html code ergänzt

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Markdown Anzeige</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>KI-exchange, KI/AI Austauschforum</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    </nav>
+    <header>
+        </nav>
         <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
     <div class="container-fluid">
         <div class="mx-4">
@@ -33,9 +35,12 @@
             </ul>
         </div>
     </div>
-</nav>
-
-    <div id="content"></div>
+    </nav>
+</header>
+<main>
+    </nav>
+   
+        <div id="content"></div>
 
         <script>
             const files = ['beschreibung.md', 'tuchschmidhuus.md'];
@@ -71,8 +76,9 @@
                 // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
                 window.onload = loadMarkdown;
         </script> 
+    </main>
     <nav
-    </ul>
+    <ul>
         <li><a href="Impressum.md">Impressum</a></li>
     </ul>
     </nav>
