--- a/index.html
+++ b/index.html
@@ -87,14 +87,24 @@
                 </div> 
     </nav>
     <footer>
-        <p>&copy; 2024 KI-Exchange</p>
+        <div class="container my-4 ">
+            <div class="row justify-content-center">
+                <div class="col-lg mx-2 align-self-center">
+                    <div class="my-3">
+                        <p>&copy; 2024 KI-Exchange</p>
+                    </div>
+                </div>    
         </footer>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
-<p>Contact the author of this page:</p>
-
-<address>
-  <a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br />
-</address>
+<div class="container my-4 ">
+    <div class="row justify-content-center">
+        <div class="col-lg mx-2 align-self-center">
+        <p>Contact the author of this page:</p>
+            <address>
+            <a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br />
+            </address>
+        </div>
+    </div>  
 </html>
