--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
                     </div>
                 </div> 
     </nav>
+    <div class="container my-4 ">
+        <div class="row justify-content-center">
+            <div class="col-lg mx-2 align-self-center">
+            <p>Für mehr Informationen schreiben Sie eine Mail an:</p>
+                <address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br />
+                </address>
+            </div>
+        </div>  
+    </html>   
     <footer>
         <div class="container my-4 ">
             <div class="row justify-content-center">
@@ -98,13 +107,3 @@
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
-<div class="container my-4 ">
-    <div class="row justify-content-center">
-        <div class="col-lg mx-2 align-self-center">
-        <p>Contact the author of this page:</p>
-            <address>
-            <a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br />
-            </address>
-        </div>
-    </div>  
-</html>
