--- a/index.html
+++ b/index.html
@@ -76,31 +76,23 @@
                 </div>
             </div> 
         <div id="content"></div>
-        <div class="container my-4 ">
-            <div class="row justify-content-center">
-                <div class="col-lg mx-2 align-self-center">
-                    <div class="my-3">
-                        <ul>
-                        <li><a href="Impressum.md">Impressum</a></li>
-                        </ul>
-                    </div>
-                </div> 
     </nav>
     <div class="container my-4 ">
         <div class="row justify-content-center">
             <div class="col-lg mx-2 align-self-center">
             <p>Für mehr Informationen schreiben Sie eine Mail an:</p>
-                <address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br />
-                </address>
+                <address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
             </div>
         </div>  
- 
     <footer>
         <div class="container my-4 ">
             <div class="row justify-content-center">
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
                         <p>&copy; 2024 KI-Exchange</p>
+                        <ul>
+                        <li><a href="Impressum.md">Impressum</a></li>
+                        </ul>
                     </div>
                 </div>    
         </footer>
