html code korrigiert

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                 <button onclick="window.open('https://docs.google.com/forms/d/13a-3H141T2XXf3bOBnJJApaeMSSuped4WbY1ginzJA0/edit', '_blank')">
                     Umfrage öffnen
                 </button>
-                
-            <p>Für mehr Informationen schreiben Sie eine Mail an:</p>
-                <address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
+            <br>
+            <br>
+            <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
             </div>
         </div>  
     <footer>
