--- a/index.html
+++ b/index.html
@@ -80,15 +80,16 @@
     <div class="container my-4 ">
         <div class="row justify-content-center">
             <div class="col-lg mx-2 align-self-center">
-            <p>Klicken Sie auf "Umfrage öffnen":</p>
+            <p>Ihre Meinung ist mir wichtig! Daher bitte ich Sie höflich mir Ihr Feedback mittels Umfrage zu geben.</p>
+            <p>Klicken Sie dafür auf den Button "Umfrage öffnen":</p>
                 <button onclick="window.open('https://docs.google.com/forms/d/13a-3H141T2XXf3bOBnJJApaeMSSuped4WbY1ginzJA0/edit', '_blank')">
                     Umfrage öffnen
                 </button>
-            <br>
-            <br>
+            <br><br><br>
             <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
             </div>
-        </div>  
+        </div> 
+        <br><br><br> 
     <footer>
         <div class="container my-4 ">
             <div class="row justify-content-center">
