html code korrigiert

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="my-3">
                         <p>&copy; 2024 KI-Exchange</p>
                         <ul>
-                        <li><a href="Impressum.md">Impressum</a></li>
+                        <a href="Impressum.md">Impressum</a>
                         </ul>
                     </div>
                 </div>    
