--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
             <br><br><br>
             <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
             </div>
-        </div> 
-        <br><br><br> 
+        </div> <br> 
     <footer>
         <div class="container my-4 ">
             <div class="row justify-content-center">
@@ -97,7 +96,7 @@
                     <div class="my-3">
                         <p>&copy; 2024 KI-Exchange</p>
                         <ul>
-                        <a href="Impressum.md">Impressum</a>
+                        <p>href="Impressum.md">Impressum</p>
                         </ul>
                     </div>
                 </div>    
