--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 <button onclick="window.open('https://docs.google.com/forms/d/13a-3H141T2XXf3bOBnJJApaeMSSuped4WbY1ginzJA0/edit', '_blank')">
                     Umfrage öffnen
                 </button>
-            <br><br><br>
+            <br><br>
             <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
             </div>
-        </div> <br> 
+        </div> 
     <footer>
         <div class="container my-4 ">
             <div class="row justify-content-center">
