Korrektur HTML-code Impressum

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
                         <p>&copy; 2024 KI-Exchange</p>
-                        <ul>
-                        <li></li><a>href="Impressum.md">Impressum</a></li>
+                        <ul
+                        <li<a href="Impressum.md">Impressum</a></li>
                         </ul>
                     </div>
                 </div>    
