12:55 - Link korr Impressum

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="my-3">
                         <p>&copy; 2024 KI-Exchange</p>
                         <ul
-                        <li<a href="Impressum.md">Impressum</a></li>
+                        <a[Impressum](Impressum.md)<a>
                         </ul>
                     </div>
                 </div>    
