--- a/index.html
+++ b/index.html
@@ -95,9 +95,11 @@
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
                         <p>&copy; 2024 KI-Exchange</p>
-                        <ul
-                        <a[Impressum](Impressum.md)<a>
-                        </ul>
+                          <nav
+                            </ul>
+                            <li><a href="Impressum.md">Impressum</a></li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>    
         </footer>
