13:03-impressum-Link in html-code kort.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <p>&copy; 2024 KI-Exchange</p>
                           <nav
                             </ul>
-                            <li><a href="Impressum.md">Impressum</a></li>
+                            <a href="Impressum.md">Impressum</a>
                             </ul>
                         </nav>
                     </div>
