--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Google-Formular</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+        }
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: none;
+        }
+        .back-link {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 15px;
+            background-color: #f0f0f0;
+            color: #333;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .back-link:hover {
+            background-color: #e0e0e0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Mein Google-Formular</h1>
+    <iframe src="https://docs.google.com/forms/d/e/IHRE_FORMULAR_ID/viewform?embedded=true"></iframe>
+    <a href="index.html" class="back-link">Zurück zur Hauptseite</a>
+</body>
+</html>
 
