--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <h1>Mein Google-Formular</h1>
-    <iframe src="https://docs.google.com/forms/d/e/<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc52CQriOR0DiYYTraoFGqeF2cyUcJt2L0XDHxop9AVus35nQ/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true"></iframe>
+    <iframe src="https://docs.google.com/forms/d/e/<iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc52CQriOR0DiYYTraoFGqeF2cyUcJt2L0XDHxop9AVus35nQ/viewform?embedded=true" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true"></iframe>
     <a href="index.html" class="back-link">Zurück zur Hauptseite</a>
 </body>
 </html>
