Headerbereich in goform_kontaktdaten.html eingefügt
Muster Code auf Basis des Index-html ein gefügt muss noch angepasst werden

--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -29,6 +29,31 @@
         }
     </style>
 </head>
+    <header>
+        </nav>
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark ">
+    <div class="container-fluid">
+        <div class="mx-4">
+            <img src="KIexchange_01.png" alt="Logo" >
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Reading Log</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    </nav>
+    </header>
 <body>
     <h1>Mein Google-Formular</h1>
     <iframe src="https://docs.google.com/forms/d/e/<iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc52CQriOR0DiYYTraoFGqeF2cyUcJt2L0XDHxop9AVus35nQ/viewform?embedded=true" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true"></iframe>
