Nav-Item von Reading-Log auf Kontaktdaten geändert

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reading Log</a>
+                    <a class="nav-link" href="goform_kontaktdaten.html">Kontaktdaten</a>
                 </li>
             </ul>
         </div>
