--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item"> 
-                    <a class="goform_kontaktdaten.html" href="#">Google-Umfrage</a>
+                    <a class="nav-link" href="#">goform_kontaktdaten.html</a>
                 </li>
             </ul>
         </div>
