--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -38,4 +38,72 @@
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVbvbw_LQnkEY0uoKQdSqtyZN1yTKkoM1QiTgSGDJuV9MlxA/viewform?usp=sharing" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true"></iframe>
     <a href="index.html" class="back-link">Zurück zur Hauptseite</a>
 </body>
+    <main>
+    </nav>
+    <div class="container my-4 ">
+        <div class="row justify-content-center">
+            <div class="col-lg mx-2 align-self-center">
+                <div class="my-3">
+                    <script>
+                        const files = ['beschreibung.md', 'tuchschmidhuus.md'];
+                
+                        function loadMarkdown(file) {
+                            return $.ajax({
+                                url: file,
+                                dataType: 'text'
+                            });
+                        }
+                                        Promise.all(files.map(loadMarkdown))
+                            .then(contents => {
+                                const html = contents.map(content => marked.parse(content)).join('<hr>');
+                                $('#content').html(html);
+                                })
+                                .catch(error => console.error('Fehler beim Laden der Markdown-Dateien:', error));
+                    </script> 
+                        <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus" width="300" height="200">
+                        <script>
+                            // Funktion zum Laden und Anzeigen des Markdown-Inhalts
+                            function loadMarkdown() {
+                            fetch('tuchschmidhuus.md')
+                                    .then(response => response.text())
+                                    .then(text => {
+                                    document.getElementById('content').innerHTML = marked.parse(text);
+                                    })
+                                    .catch(error => console.error('Fehler beim Laden der Markdown-Datei:', error));
+                            }
+                                            // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
+                            window.onload = loadMarkdown;
+                    </script> 
+                </div>
+            </div> 
+        <div id="content"></div>
+    </nav>
+    <div class="container my-4 ">
+        <div class="row justify-content-center">
+            <div class="col-lg mx-2 align-self-center">
+            <p>Ihre Meinung ist mir wichtig! Daher bitte ich Sie höflich mir Ihr Feedback mittels Umfrage zu geben.</p>
+            <p>Klicken Sie dafür auf den Button "Umfrage öffnen":</p>
+                <button onclick="window.open('https://docs.google.com/forms/d/13a-3H141T2XXf3bOBnJJApaeMSSuped4WbY1ginzJA0/edit', '_blank')">
+                    Umfrage öffnen
+                </button>
+            <br><br>
+            <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
+            </div>
+        </div> 
+    <footer>
+        <div class="container my-4 ">
+            <div class="row justify-content-center">
+                <div class="col-lg mx-2 align-self-center">
+                    <div class="my-3">
+                        <p>&copy; 2024 KI-Exchange</p>
+                            <nav
+                            <ul>
+                            <a href="Impressum.md">Impressum</a>
+                            </ul>
+                            </nav>
+                    </div>
+                </div>    
+        </footer>
+    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
