--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -59,7 +59,7 @@
         <div id="content"></div>
     </nav>
 <h1>Mein Google-Formular</h1>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVbvbw_LQnkEY0uoKQdSqtyZN1yTKkoM1QiTgSGDJuV9MlxA/viewform?usp=sharing" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true" width="640" height="959" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>/viewform?embedded=true"></iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVbvbw_LQnkEY0uoKQdSqtyZN1yTKkoM1QiTgSGDJuV9MlxA/viewform?usp=sharing" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
     <footer>
         <div class="container my-4 ">
             <div class="row justify-content-center">
