--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -58,7 +58,14 @@
             </div> 
         <div id="content"></div>
     </nav>
-<h1>Mein Google-Formular</h1>
+    <p>Mein Google-Formular</p>
+    <div class="col-lg mx-2 align-self-center">
+        <p>Ihre Meinung ist mir wichtig! Daher bitte ich Sie höflich mir Ihr Feedback mittels Umfrage zu geben.</p>
+        <br><br>
+        <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
+        </div>
+            </div> 
+        <div id="content"></div>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVbvbw_LQnkEY0uoKQdSqtyZN1yTKkoM1QiTgSGDJuV9MlxA/viewform?usp=sharing" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
     <footer>
         <div class="container my-4 ">
