--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -62,12 +62,15 @@
     <div class="col-lg mx-2 align-self-center">
         <p>Ihre Meinung ist mir wichtig! Daher bitte ich Sie höflich mir Ihr Feedback mittels Umfrage zu geben.</p>
         <br><br>
-        <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
-        </div>
             </div> 
         <div id="content"></div>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVbvbw_LQnkEY0uoKQdSqtyZN1yTKkoM1QiTgSGDJuV9MlxA/viewform?usp=sharing" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
-    <footer>
+        <div class="col-lg mx-2 align-self-center">
+        <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
+        </div>
+            </div> 
+        <div id="con
+        <footer>
         <div class="container my-4 ">
             <div class="row justify-content-center">
                 <div class="col-lg mx-2 align-self-center">
@@ -79,7 +82,7 @@
                             </ul>
                             </nav>
                     </div>
-                </div>    
+                </div>
         </footer>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
