--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -44,7 +44,7 @@
                         <script>
                             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
                             function loadMarkdown() {
-                            fetch('tuchschmidhuus.md')
+                            fetch('txt-goform.md')
                                     .then(response => response.text())
                                     .then(text => {
                                     document.getElementById('content').innerHTML = marked.parse(text);
