--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
                     <a class="nav-link" href="goform_kontaktdaten.html">Google-Umfrage</a>
                 </li>
             </ul>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"> 
+                    <a class="nav-link" href="kontaktformular.html">Google-Umfrage</a>
+                </li>
+            </ul>
         </div>
     </div>
     </nav>
