--- a/kontaktdaten.html
+++ b/kontaktdaten.html
@@ -44,7 +44,7 @@
                         <script>
                             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
                             function loadMarkdown() {
-                            fetch('txt-goform.md')
+                            fetch('kontaktdaten.md')
                                     .then(response => response.text())
                                     .then(text => {
                                     document.getElementById('content').innerHTML = marked.parse(text);
@@ -58,9 +58,9 @@
             </div> 
         <div id="content"></div>
     </nav>
-    <p>Mein Google-Formular</p>
+    <p>Mein Google-Formular für die Mitteilung Ihrer Kontaktdaten</p>
     <div class="col-lg mx-2 align-self-center">
-        <p>Ihre Meinung ist mir wichtig! Daher bitte ich Sie höflich mir Ihr Feedback mittels Umfrage zu geben.</p>
+        <p>Diese werden nicht an dritte weitergegeben.</p>
         <br><br>
             </div> 
         <div id="content"></div>
