--- a/kontaktdaten.html
+++ b/kontaktdaten.html
@@ -64,7 +64,7 @@
         <br><br>
             </div> 
         <div id="content"></div>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc52CQriOR0DiYYTraoFGqeF2cyUcJt2L0XDHxop9AVus35nQ/viewform?usp=dialog" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc52CQriOR0DiYYTraoFGqeF2cyUcJt2L0XDHxop9AVus35nQ/viewform?usp=sharing" width="640" height="1051" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
         <div class="col-lg mx-2 align-self-center">
         <p>Für mehr Informationen schreiben Sie eine Mail an:</p><address><a href="mailto:info@di-tommaso.site">info@di-tommaso.site</a><br /></address>
         </div>
