--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-lg mx-2 align-self-center">
                 <div class="my-3">
                     <script>
-                        const files = ['beschreibung.md', 'tuchschmidhuus.md'];
+                        const files = ['tuchschmidhuus.md' , 'eventvorschau.md'];
                 
                         function loadMarkdown(file) {
                             return $.ajax({
@@ -66,6 +66,19 @@
                             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
                             function loadMarkdown() {
                             fetch('tuchschmidhuus.md')
+                                    .then(response => response.text())
+                                    .then(text => {
+                                    document.getElementById('content').innerHTML = marked.parse(text);
+                                    })
+                                    .catch(error => console.error('Fehler beim Laden der Markdown-Datei:', error));
+                            }
+                                            // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
+                            window.onload = loadMarkdown;
+                    </script>
+                    script>
+                            // Funktion zum Laden und Anzeigen des Markdown-Inhalts
+                            function loadMarkdown() {
+                            fetch('eventvorschau.md')
                                     .then(response => response.text())
                                     .then(text => {
                                     document.getElementById('content').innerHTML = marked.parse(text);
