--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                             // Laden Sie den Markdown-Inhalt, wenn die Seite geladen ist
                             window.onload = loadMarkdown;
                     </script>
-                    script>
+                    <script>
                             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
                             function loadMarkdown() {
                             fetch('eventvorschau.md')
