--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -9,6 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>KI-exchange, Google-Umfrage</title>
+    <style>
+    body {background-color: #08ABF4;}
+    </style>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
