--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
-                        <p>© <span id="currentYear"></span> Ihr Website-Name</p>
+                        <p>© <span id="currentYear"></span> KI-Exchange</p>
                             <nav
                             <ul>
                             <a href="Impressum.md">Impressum</a>
