--- a/goform_kontaktdaten.html
+++ b/goform_kontaktdaten.html
@@ -79,7 +79,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg mx-2 align-self-center">
                     <div class="my-3">
-                        <p>&copy; 2024 KI-Exchange</p>
+                        <p>© <span id="currentYear"></span> KI-Exchange</p>
                             <nav
                             <ul>
                             <a href="Impressum.md">Impressum</a>
