--- a/kontaktdaten.html
+++ b/kontaktdaten.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown Anzeige</title>
+    <title>Kontaktdaten</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>KI-exchange, Google-Umfrage</title>
@@ -63,7 +63,7 @@
     </nav>
     <p>Mein Google-Formular für die Mitteilung Ihrer Kontaktdaten</p>
     <div class="col-lg mx-2 align-self-center">
-        <p>Diese werden nicht an dritte weitergegeben.</p>
+    <p>Diese werden nicht an dritte weitergegeben.</p>
         <br><br>
             </div> 
         <div id="content"></div>
