--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                                 })
                                 .catch(error => console.error('Fehler beim Laden der Markdown-Dateien:', error));
                     </script> 
+                        <h2>Bilder nebeneinander - Gleiche Höhe</h2>
+    <div class="image-container equal-height">
+        <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus"width="300" height="200">
+        <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus"width="300" height="200">
+    </div>
                         <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus" width="300" height="200">
                     <script>
                             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
