--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
                         <h2>Bilder nebeneinander - Gleiche Höhe</h2>
     <div class="image-container equal-height">
         <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus"width="300" height="200">
-        <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus"width="300" height="200">
+        <img src="im-beschr/KI EDU Media-01.jpeg" alt="tuchschmidhuus"width="300" height="200">
     </div>
-                        <img src="im-beschr/20240914_Tuchschmidhuus.png" alt="tuchschmidhuus" width="300" height="200">
                     <script>
                             // Funktion zum Laden und Anzeigen des Markdown-Inhalts
                             function loadMarkdown() {
